--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-streamlit
-google-generativeai
-python-dotenv
-langchain
-PyPDF2
-chromadb
-pdf2image
-faiss-cpu
+streamlit==1.31.0
+python-dotenv==1.0.0
+google-generativeai==0.3.2
