--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,8 @@
             "src": "/(.*)",
             "dest": "app.py"
         }
-    ]
+    ],
+    "env": {
+        "PYTHON_VERSION": "3.9"
+    }
 }
