--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,3 +1,9 @@
 [server]
 enableCORS = false
 enableXsrfProtection = false
+
+[theme]
+primaryColor = "#FFCC00"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#262730"
